--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.8",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
